# embedded_crypto_benchmark

./: Cargo.toml
src/: main.rs
